# python-power-electronics-with-uv

./: README.md  main.py  pyproject.toml  requirements.txt
simulator_interface/: manage.py  simulation_collection
simulator_interface/simulations/: apps.py  circuit_elements.py  circuit_exceptions.py  circuit_solver.py  matrix.py  models.py  network_reader.py  solver.py  views.py
simulator_interface/simulations/migrations/: 0001_initial.py
simulator_interface/simulations/templates/: add_control_files.html  base_framework.html  config_control_files.html  contact.html  documentation.html  edit_circuit_parameters.html  edit_circuit_schematic.html  edit_simulation.html  index.html  list_simulation.html  main_circuit_components.html  new_simulation.html  output_interface.html
simulator_interface/simulator_interface/: settings.py  urls.py  wsgi.py
simulator_interface/static/css/: style.css
simulator_interface/static/js/: forms.js
