[project]
name = "ppe_webapp_py3_4_4_0"
version = "0.1.0"
requires-python = ">=3.8,<3.9"

dependencies = [
    "certifi==2019.6.16",
    "cycler==0.10.0",
    "Django==2.2.1",
    "kiwisolver==1.1.0",
    "matplotlib==3.7.5",
    "numpy==1.23.5",
    "pyparsing==2.4.0",
    "python-dateutil==2.8.0",
    "pytz==2019.1",
    "six==1.12.0",
    "sqlparse==0.3.0",
    "tornado==6.0.3",
]
